# flymd-xxtui

./: .gitignore  README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  index.json  package-lock.json  package.json
public/plugins/ai-assistant/: main.js  manifest.json
public/plugins/ai-novel/: main.js  manifest.json
public/plugins/autoyaml/: main.js  manifest.json
public/plugins/backlinks-plugin/: main.js  manifest.json
public/plugins/doc-mindmap/: main.js  manifest.json
public/plugins/editor-enhancer/: main.js  manifest.json
public/plugins/floating-toolbar/: main.js  manifest.json
public/plugins/git-history/: main.js  manifest.json
public/plugins/markdown-table/: main.js  (+1 more)
scripts/: ensure-icons.cjs  make_icon_safearea.py
src/: fileTree.ts  i18n.ts  icons.ts  main.ts  style.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/core/: autoSave.ts  imagePaste.ts  imageUpload.ts  scrollbar.ts  uiZoom.ts  updateTypes.ts  updateUtils.ts
src/exporters/: pdf.ts
src/extensions/: extensionsPanel.ts  pluginHost.ts  pluginMenuManager.ts  pluginRuntimeHost.ts  webdavSync.ts
src/modes/: focusModeUi.ts  sourcePreviewSplit.ts  stickyNoteUi.ts
src/plugins/: markdownItKatex.ts
src/tabs/: TabBar.ts  TabManager.ts  TextareaUndoManager.ts  integration.ts
src/ui/: libraryContextMenu.ts  librarySettingsDialog.ts  linkDialogs.ts  ribbonLibraryList.ts  updateOverlay.ts
src/uploader/: imgla.ts  manualImageUpload.ts  s3.ts  storeConfig.ts  types.ts  upload.ts  uploaderDialog.ts
src/utils/: color.ts  library.ts  richClipboard.ts
(+15 files in other folders)
